2009-07-16  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.h: mark the ViewportOrigin and ViewportWidth
	properties as AlwaysChange. fix drt #291.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: Retrieve all instance variables we need into local variables
	before decreasing the refcount. If the refcount is > 0 after decreasing it, we can't
	access instance variables anymore, since another thread might have unreffed which would
	cause the object to be deleted already.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: #if DEBUG -> #if SANITY and fix a typo in a comment.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: Add sanity check for refcount < 0.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.cpp: Move sanity verification into #if SANITY.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.h: Is, GetType, GetTypeName: use the Type overloads
	which takes a Deployment and provide our deployment instance.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* type.cpp|h.in: Add Find, IsAssignable and IsSubclassOf methods which
	takes a Deployment argument for when we already have the Deployment handy.
	This way we can avoid hitting Deployment::GetCurrent on some frequently used
	methods.

	* type.h: Regenerated.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* runtime.h: Add stack trace to warning.

2009-07-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* audio.cpp: Underflowed: if we haven't ended and don't have any more
	frames, we need to set the Waiting bit so that we start playing again when
	we get more frames.

2009-07-16  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: reset the bitmapimage uri for the next time,
	avoid issues while reusing dlders for the same images, like in drt2013

2009-07-16  Stephane Delcroix  <sdelcroix@novell.com>
