@@ -1,3 +1,9 @@
+2009-07-16  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.Controls/ContentControlTest.cs: Add extra
+	  tests to more clearly define when the IsEnabled state of a
+	  control propagates to its children.
+
 2009-07-15  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* System.Threading/TimerTest.cs: New. Shows the bad (sync) 
